# sandbox-tools

./: .gitignore  Cargo.toml  README.md  flake.nix
patches/: passt-fix-user-namespace-detection.patch
unshare-cli/: Cargo.toml
unshare-cli/src/: adapter.rs  lib.rs  main.rs  parser.rs  runner.rs
unshare-cli/tests/: integration_test.rs
unshare-core/: Cargo.toml
unshare-core/src/: child.rs  env.rs  errors.rs  fs.rs  lib.rs  mount.rs  namespace.rs  parent.rs  users.rs  utils.rs
unshare-core/src/unsafe_mod/: mod.rs  process.rs  seccomp.rs  selinux.rs
