[workspace]
resolver = "2"
members = ["unshare-core", "unshare-cli"]

[workspace.package]
version = "0.1.0"


[workspace.metadata.crane]
name = "sandbox-tools"

# Common dependencies shared across the workspace
[workspace.dependencies]
anyhow = "1.0"
nix = { version = "0.30", features = [
  "dir",
  "fs",
  "hostname",
  "mount",
  "poll",
  "process",
  "pthread",
  "sched",
  "signal",
  "socket",
  "term",
  "user",
] }
libc = "0.2"
thiserror = "1.0"
bitflags = "2.5"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
procfs = { version = "0.15.1", features = ["serde1"] }
capng = "0.2.3"
landlock = "0.4.2"
assert_cmd = "2.0.17"
predicates = "3.1.3"
atty = "0.2.14"


[profile.release]
opt-level = 3
strip = false
debug = true
lto = true
#codegen-units = 1
